2008-04-06  Carlo Baldassi  <carlobaldassi@gmail.com>

	* Added 16 bit support

2008-02-25  Carlo Baldassi  <carlobaldassi@gmail.com>

	* Added left-right switches

2008-02-20  Carlo Baldassi  <carlobaldassi@gmail.com>

	* Added rigidity mask

2007-12-07  Carlo Baldassi  <carlobaldassi@yahoo.it>

	* initial revision.
